--- a/c_login_register_page.html
+++ b/c_login_register_page.html
@@ -6,7 +6,7 @@
     <body>
         
         <div class=splash>
-            <img class="fade-in" src="logo_struct.png" alt="logo">
+            <img class="fade-in" src="logo_splash.png" alt="logo">
         </div>
 
         <script>
