--- a/a_employee_details.html
+++ b/a_employee_details.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Satisfy&display=swap" rel="stylesheet"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Details</title>
+    <title>Employee Details</title>
     <style>
         body{
             background: linear-gradient(cornflowerblue,blue);
@@ -15,18 +15,19 @@
 
         h1{
             font-size: 50px;
+            letter-spacing: 1px;
             font-family: 'Caveat',cursive;
             text-align: center;
         }
 
         .order_list{
-            height: 650px;
+            height: auto;
             width: 80%;
             background-color: white;
             margin-left: auto;
             margin-right: auto;
             overflow-y: auto;
-            overflow-x:hidden;
+            overflow-x: hidden;
         }
 
         table{
@@ -34,7 +35,7 @@
             font-family: arial;
             margin: 25px 0;
             font-size: 0.9em;
-            min-width: 1216px;
+            min-width: 1218px;
             text-align: center;
         }
 
@@ -59,13 +60,12 @@
         table tr:last-of-type{
             border-bottom: 2px solid cornflowerblue;
         }
-
     </style>
 </head>
 <body>
-    <h1>Orders for Today...</h1>
+    <h1>Employee Details</h1>
     <div class="order_list">
-    <?php
+        <?php
             $db_host='127.0.0.1';
             $db_user='root';
             $db_pass='';
@@ -77,7 +77,7 @@
                 die('Failed to connect mysql database'.mysqli_connect_error());
             }
 
-            $sql='SELECT * from customer_order';
+            $sql='SELECT * from employee';
             $query = mysqli_query($conn,$sql);
 
             if(!$query)
@@ -89,22 +89,26 @@
             <table class='table'>
             <thead>
             <tr>
-            <th>Customer_ID</th>
-            <th>Product_ID</th>
-            <th>Total Price(₹)</th>
+            <th>ID</th>
+            <th>PIN</th>
+            <th>Name</th>
+            <th>Mobile Number</th>
             <th>Address</th>
-            <th>Order Date/Time</th>
+            <th>Designation</th>
+            <th>Email Id</th>
             </tr>
             </thead>";
 
             while($row=mysqli_fetch_array($query))
             {
                 echo "<tr>
-                <td>".$row['customer_id']."</td>
-                <td>".$row['product_id']."</td>
-                <td>".$row['total_price']."</td>
-                <td>".$row['house_no'].",".$row['street_name'].",".$row['area_name']."</td>
-                <td>".$row['created_at']."</td>
+                <td>".$row['Emp_id']."</td>
+                <td>".$row['Emp_Pin']."</td>
+                <td>".$row['Emp_name']."</td>
+                <td>".$row['Emp_mobile']."</td>
+                <td>".$row['Emp_address']."</td>
+                <td>".$row['Designation']."</td>
+                <td>".$row['Emp_email']."</td>
                 </tr>";
             }
 
