--- a/a_menu_list.html
+++ b/a_menu_list.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Satisfy&display=swap" rel="stylesheet"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Details</title>
+    <title>Menu List</title>
     <style>
         body{
             background: linear-gradient(cornflowerblue,blue);
@@ -21,12 +21,12 @@
 
         .order_list{
             height: 650px;
-            width: 80%;
+            width: 40%;
             background-color: white;
             margin-left: auto;
             margin-right: auto;
             overflow-y: auto;
-            overflow-x:hidden;
+            overflow-x: hidden;
         }
 
         table{
@@ -34,7 +34,7 @@
             font-family: arial;
             margin: 25px 0;
             font-size: 0.9em;
-            min-width: 1216px;
+            min-width: 590px;
             text-align: center;
         }
 
@@ -60,10 +60,36 @@
             border-bottom: 2px solid cornflowerblue;
         }
 
+
+        /* Sorting */
+        .table-sortable th {
+        cursor: pointer;
+        }
+
+        .table-sortable .th-sort-asc::after {
+        content: "\25b4";
+        }
+
+        .table-sortable .th-sort-desc::after {
+        content: "\25be";
+        }
+
+        .table-sortable .th-sort-asc::after,
+        .table-sortable .th-sort-desc::after {
+        margin-left: 5px;
+        }
+
+        .table-sortable .th-sort-asc,
+        .table-sortable .th-sort-desc {
+        background: rgba(0, 0, 0, 0.1);
+        }
+
+
     </style>
 </head>
 <body>
-    <h1>Orders for Today...</h1>
+
+    <h1>Menu List</h1>
     <div class="order_list">
     <?php
             $db_host='127.0.0.1';
@@ -77,7 +103,7 @@
                 die('Failed to connect mysql database'.mysqli_connect_error());
             }
 
-            $sql='SELECT * from customer_order';
+            $sql='SELECT * from menu';
             $query = mysqli_query($conn,$sql);
 
             if(!$query)
@@ -86,30 +112,29 @@
             }
 
             echo "
-            <table class='table'>
+            <table class='table-sortable'>
             <thead>
             <tr>
-            <th>Customer_ID</th>
-            <th>Product_ID</th>
-            <th>Total Price(₹)</th>
-            <th>Address</th>
-            <th>Order Date/Time</th>
+            <th>ID</th>
+            <th>Food Item</th>
+            <th>Price(₹)</th>
             </tr>
-            </thead>";
+            </thead>
+            <tbody>";
 
             while($row=mysqli_fetch_array($query))
             {
                 echo "<tr>
-                <td>".$row['customer_id']."</td>
-                <td>".$row['product_id']."</td>
-                <td>".$row['total_price']."</td>
-                <td>".$row['house_no'].",".$row['street_name'].",".$row['area_name']."</td>
-                <td>".$row['created_at']."</td>
+                <td>".$row['item_id']."</td>
+                <td>".$row['item']."</td>
+                <td>".$row['item_price']."</td>
                 </tr>";
             }
 
-            echo "</table>";
+            echo "</tbody>
+            </table>";
         ?>
     </div>
+    <script src="tablesort.js"></script>
 </body>
 </html>
